Explicitly set overflow:visible for hr elements. Fixes issue with star not showing on Chrome 61+.

--- a/css/added.css
+++ b/css/added.css
@@ -126,6 +126,10 @@ section#about p {
     margin-bottom: 30px;
 }
 
+hr {
+    overflow: visible;
+}
+
 hr.star-primary {
     border-color: #333;
 }
